<resources>
    <string name="app_name">QuizApp</string>
    <string name="appquiz">AppQuiz!</string>
    <string name="quem_foi_o_diretor_de_o_senhor_dos_an_is">Quem foi o diretor de o Senhor dos Anéis?</string>
    <string name="iniciar_novo_quiz">Iniciar novo Quiz</string>
    <string name="your_score">Your Score: 0</string>
    <string name="quem_foi_o_diretor_de_o_senhor_dos_aneis">Quem foi o diretor de \'O Senhor dos Anéis\'?</string>
    <string name="peter_craig">Peter Craig</string>
    <string name="peter_jackson">Peter Jackson</string>
    <string name="peter_parker">Peter Parker</string>
    <string name="qual_o_nome_da_escola_de_magia_em_harry_potter">Qual é o nome da escola de magia em \'Harry Potter\'?</string>
    <string name="hogwarts">Hogwarts</string>
    <string name="beauxbatons">Beauxbatons</string>
    <string name="durmstrang">Durmstrang</string>
    <string name="qual_o_nome_do_protagonista_de_breaking_bad">Qual é o nome do protagonista de \'Breaking Bad\'?</string>
    <string name="walter_white">Walter White</string>
    <string name="rhaegar_targaryen">Rhaegar Targaryen</string>
    <string name="bilbo_bolseiro">Bilbo, bolseiro</string>
    <string name="qual_o_ano_de_funda_o_do_corinthians">Qual é o ano de fundação do Corinthians?</string>
    <string name="_1910">1910</string>
    <string name="_1920">1920</string>
    <string name="_1930">1930</string>
    <string name="quantos_t_tulos_do_campeonato_brasileiro_o_corinthians_possui">Quantos títulos do Campeonato Brasileiro o Corinthians possui?</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="quem_o_maior_artilheiro_da_hist_ria_do_corinthians">Quem é o maior artilheiro da história do Corinthians?</string>
    <string name="romero">Romero</string>
    <string name="ronaldo_fen_meno">Ronaldo Fenômeno</string>
    <string name="cl_udio_christ_vam">Cláudio Christóvam</string>
</resources>