<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quem_foi_o_diretor_de_o_senhor_dos_aneis"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:layout_marginBottom="8dp" />

        <RadioGroup
            android:id="@+id/radioGroupDirector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonPeterCraig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peter_craig" />

            <RadioButton
                android:id="@+id/radioButtonPeterJackson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peter_jackson" />

            <RadioButton
                android:id="@+id/radioButtonPeterParker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peter_parker" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewHarryPotter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qual_o_nome_da_escola_de_magia_em_harry_potter"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <RadioGroup
            android:id="@+id/radioGroupHarryPotter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonHogwarts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hogwarts" />

            <RadioButton
                android:id="@+id/radioButtonBeauxbatons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beauxbatons" />

            <RadioButton
                android:id="@+id/radioButtonDurmstrang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/durmstrang" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewBreakingBad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qual_o_nome_do_protagonista_de_breaking_bad"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <RadioGroup
            android:id="@+id/radioGroupBreakingBad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonWalterWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walter_white" />

            <RadioButton
                android:id="@+id/radioButtonJessePinkman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bilbo_bolseiro" />

            <RadioButton
                android:id="@+id/radioButtonSaulGoodman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rhaegar_targaryen" />
        </RadioGroup>

    </LinearLayout>
</ScrollView>